# duolingeo_bot

./: Cargo.toml
src/: main.rs
