[package]
name = "duolingeo_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
lingual = { version = "1.0.7", features = ["blocking"] }
regex = "1.10.2"
reqwest = "0.11.23"
serde = "1.0.195"
serde_json = "1.0.111"
thirtyfour = "0.31.0"
tokio = { version = "1.35.0", features = ["full"] }
whatlang = "0.16.4"
